Added worker services.

--- a/Source/EtAlii.ML.Aore.Admin/MainWindow.xaml
+++ b/Source/EtAlii.ML.Aore.Admin/MainWindow.xaml
@@ -7,6 +7,20 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <TabControl TabStripPlacement="Left">
+            <TabControl.Items>
+                <TabItem Header="Aspect definition">
 
+                </TabItem>
+                <TabItem Header="Aspect training">
+                </TabItem>
+                <TabItem Header="Concept definition">
+
+                </TabItem>
+                <TabItem Header="Concept training">
+
+                </TabItem>
+            </TabControl.Items>
+        </TabControl>
     </Grid>
 </Window>
